// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI|Layout/Desktop (mocked) bottom Panel 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (mocked) default 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (mocked) full 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (mocked) no Nav 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (mocked) no Panel 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (mocked) no Panel, no Nav 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (mocked) page 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (real) bottom Panel 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (real) default 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (real) full 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (real) no Nav 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (real) no Panel 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (real) no Panel, no Nav 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Desktop (real) page 1`] = `
.emotion-0 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

<div
  class="emotion-0"
>
  <div
    style="position:absolute;width:0;height:0;visibility:hidden;display:none"
  />
  <div />
</div>
`;

exports[`Storyshots UI|Layout/Mobile (mocked) initial 0 1`] = `
.emotion-7 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: inherit;
  border-bottom-color: transparent;
}

.emotion-7:empty {
  display: none;
}

.emotion-7:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-8 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: #1EA7FD;
  border-bottom-color: #1EA7FD;
}

.emotion-8:empty {
  display: none;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-11 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.emotion-6 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: calc(100% - 40px);
}

.emotion-1 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(-80vw);
  -ms-transform: translateX(-80vw);
  transform: translateX(-80vw);
  left: 0;
}

.emotion-1:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-1:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-0 {
  background: hotpink;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-3 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 100%;
  -webkit-transform: translateX(0) scale(1);
  -ms-transform: translateX(0) scale(1);
  transform: translateX(0) scale(1);
  left: 0;
}

.emotion-3:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-2 {
  background: deepskyblue;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-5 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(80vw);
  -ms-transform: translateX(80vw);
  transform: translateX(80vw);
  right: 0;
}

.emotion-5:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-5:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-4 {
  background: orangered;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-10 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1);
  background: #FFFFFF;
}

.emotion-10 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  class="emotion-11"
>
  <div
    class="emotion-6"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="emotion-3"
    >
      <div>
        <div>
          <div
            class="emotion-2"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "main",
  "viewMode": "story",
  "debug": {
    "initialActive": 0
  }
}
            </pre>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
        color="orangered"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {
  "hidden": false
}
        </pre>
      </div>
    </div>
  </div>
  <nav
    class="emotion-10"
  >
    <button
      class="emotion-7"
    >
      Sidebar
    </button>
    <button
      class="emotion-8"
    >
      Canvas
    </button>
    <button
      class="emotion-7"
    >
      Addons
    </button>
  </nav>
</div>
`;

exports[`Storyshots UI|Layout/Mobile (mocked) initial 1 1`] = `
.emotion-7 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: inherit;
  border-bottom-color: transparent;
}

.emotion-7:empty {
  display: none;
}

.emotion-7:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-11 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.emotion-6 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: calc(100% - 40px);
}

.emotion-1 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(-80vw);
  -ms-transform: translateX(-80vw);
  transform: translateX(-80vw);
  left: 0;
}

.emotion-1:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-1:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-0 {
  background: hotpink;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-3 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 100%;
  -webkit-transform: translateX(0) scale(1);
  -ms-transform: translateX(0) scale(1);
  transform: translateX(0) scale(1);
  left: 0;
}

.emotion-3:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-2 {
  background: deepskyblue;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-5 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(80vw);
  -ms-transform: translateX(80vw);
  transform: translateX(80vw);
  right: 0;
}

.emotion-5:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-5:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-4 {
  background: orangered;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-10 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1);
  background: #FFFFFF;
}

.emotion-10 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  class="emotion-11"
>
  <div
    class="emotion-6"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="emotion-3"
    >
      <div>
        <div>
          <div
            class="emotion-2"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "main",
  "viewMode": "story",
  "debug": {
    "initialActive": 1
  }
}
            </pre>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
        color="orangered"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {
  "hidden": false
}
        </pre>
      </div>
    </div>
  </div>
  <nav
    class="emotion-10"
  >
    <button
      class="emotion-7"
    >
      Sidebar
    </button>
    <button
      class="emotion-7"
    >
      Canvas
    </button>
    <button
      class="emotion-7"
    >
      Addons
    </button>
  </nav>
</div>
`;

exports[`Storyshots UI|Layout/Mobile (mocked) initial 2 1`] = `
.emotion-7 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: inherit;
  border-bottom-color: transparent;
}

.emotion-7:empty {
  display: none;
}

.emotion-7:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-11 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.emotion-6 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: calc(100% - 40px);
}

.emotion-1 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(-80vw);
  -ms-transform: translateX(-80vw);
  transform: translateX(-80vw);
  left: 0;
}

.emotion-1:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-1:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-0 {
  background: hotpink;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-3 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 100%;
  -webkit-transform: translateX(0) scale(1);
  -ms-transform: translateX(0) scale(1);
  transform: translateX(0) scale(1);
  left: 0;
}

.emotion-3:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-3:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-2 {
  background: deepskyblue;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-5 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(80vw);
  -ms-transform: translateX(80vw);
  transform: translateX(80vw);
  right: 0;
}

.emotion-5:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-5:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-4 {
  background: orangered;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-10 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1);
  background: #FFFFFF;
}

.emotion-10 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  class="emotion-11"
>
  <div
    class="emotion-6"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="emotion-3"
    >
      <div>
        <div>
          <div
            class="emotion-2"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "main",
  "viewMode": "story",
  "debug": {
    "initialActive": 2
  }
}
            </pre>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="emotion-4"
        color="orangered"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {
  "hidden": false
}
        </pre>
      </div>
    </div>
  </div>
  <nav
    class="emotion-10"
  >
    <button
      class="emotion-7"
    >
      Sidebar
    </button>
    <button
      class="emotion-7"
    >
      Canvas
    </button>
    <button
      class="emotion-7"
    >
      Addons
    </button>
  </nav>
</div>
`;

exports[`Storyshots UI|Layout/Mobile (mocked) page 1`] = `
.emotion-8 {
  white-space: normal;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  overflow: hidden;
  vertical-align: top;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 15px;
  text-transform: capitalize;
  -webkit-transition: color 0.2s linear,border-bottom-color 0.2s linear;
  transition: color 0.2s linear,border-bottom-color 0.2s linear;
  height: 40px;
  line-height: 12px;
  cursor: pointer;
  background: transparent;
  border: 0 solid transparent;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  font-weight: bold;
  font-size: 13px;
  color: inherit;
  border-bottom-color: transparent;
}

.emotion-8:empty {
  display: none;
}

.emotion-8:focus {
  outline: 0 none;
  border-bottom-color: #1EA7FD;
}

.emotion-11 {
  position: fixed;
  left: 0;
  top: 0;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.emotion-7 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: calc(100% - 40px);
}

.emotion-1 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(-80vw);
  -ms-transform: translateX(-80vw);
  transform: translateX(-80vw);
  left: 0;
}

.emotion-1:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-1:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-0 {
  background: hotpink;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-4 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 100%;
  -webkit-transform: translateX(0) scale(1);
  -ms-transform: translateX(0) scale(1);
  transform: translateX(0) scale(1);
  left: 0;
}

.emotion-4:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-4:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-2 {
  background: deepskyblue;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-6 {
  -webkit-transition: -webkit-transform .2s ease;
  -webkit-transition: transform .2s ease;
  transition: transform .2s ease;
  position: absolute;
  top: 0;
  height: 100%;
  overflow: auto;
  background: #FFFFFF;
  width: 80vw;
  -webkit-transform: translateX(80vw);
  -ms-transform: translateX(80vw);
  transform: translateX(80vw);
  right: 0;
}

.emotion-6:nth-of-type(1) {
  border-right: 1px solid rgba(0,0,0,.1);
}

.emotion-6:nth-of-type(3) {
  border-left: 1px solid rgba(0,0,0,.1);
}

.emotion-5 {
  background: orangered;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

.emotion-10 {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1);
  background: #FFFFFF;
}

.emotion-10 > * {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-3 {
  background: cyan;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow: hidden;
}

<div
  class="emotion-11"
>
  <div
    class="emotion-7"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-0"
        color="hotpink"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {}
        </pre>
      </div>
    </div>
    <div
      class="emotion-4"
    >
      <div>
        <div
          hidden=""
        >
          <div
            class="emotion-2"
            color="deepskyblue"
          >
            <h2
              style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
            >
              1
            </h2>
            <pre>
              {
  "id": "main",
  "debug": {
    "initialActive": 1
  }
}
            </pre>
          </div>
        </div>
        <div
          class="emotion-3"
          color="cyan"
        >
          <h2
            style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
          >
            1
          </h2>
          <pre>
            {}
          </pre>
        </div>
      </div>
    </div>
    <div
      class="emotion-6"
    >
      <div
        class="emotion-5"
        color="orangered"
      >
        <h2
          style="position:absolute;bottom:0;right:0;color:rgba(0,0,0,0.2);font-size:150px;line-height:150px;margin:-20px"
        >
          1
        </h2>
        <pre>
          {
  "hidden": true
}
        </pre>
      </div>
    </div>
  </div>
  <nav
    class="emotion-10"
  >
    <button
      class="emotion-8"
    >
      Sidebar
    </button>
    <button
      class="emotion-8"
    >
      settings
    </button>
  </nav>
</div>
`;
